@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Sudo Slider | Effect width CSS animations</title>
+    <title>Sudo Slider | Effect width CSS3 animations</title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <link rel="STYLESHEET" type="text/css" href="../css/style.css">
     <link rel="STYLESHEET" type="text/css" href="../css/lib/animate.min.css">
@@ -28,19 +28,32 @@
             animation-fill-mode: both;
         }
 
-        .visible {
+        #slider {
             overflow: visible !important;
         }
     </style>
     <script type="text/javascript">
         $(document).ready(function(){
-            var outAnimationClass = "bounceOut";
-            var inAnimationClass = "bounceIn";
             // Note: If you change the animationTime, you also need to change the animation-duration in the CSS.
             var animationTime = 1000;
 
+            var inAnimations = ["fadeIn", "fadeInUp", "fadeInDown", "fadeInLeft", "fadeInRight", "fadeInUpBig", "fadeInDownBig", "fadeInLeftBig", "fadeInRightBig", "bounceIn", "bounceInDown", "bounceInUp", "bounceInLeft", "bounceInRight", "rotateIn", "rotateInDownLeft", "rotateInDownRight", "rotateInUpLeft", "rotateInUpRight", "lightSpeedIn", "rollIn"]
+            var inSelectForm = $("#inSelect");
+
+            $.each(inAnimations, function (index, animation){
+                inSelectForm.append("<option value=\"" + animation + "\">" + animation + "</option>");
+            });
+
+            var outAnimations = ["fadeOut", "fadeOutUp", "fadeOutDown", "fadeOutLeft", "fadeOutRight", "fadeOutUpBig", "fadeOutDownBig", "fadeOutLeftBig", "fadeOutRightBig", "bounceOut", "bounceOutDown", "bounceOutUp", "bounceOutLeft", "bounceOutRight", "rotateOut", "rotateOutDownLeft", "rotateOutDownRight", "rotateOutUpLeft", "rotateOutUpRight", "lightSpeedOut", "hinge", "rollOut"]
+            var outSelectForm = $("#outSelect");
+            $.each(outAnimations, function (index, animation){
+                outSelectForm.append("<option value=\"" + animation + "\">" + animation + "</option>");
+            });
+
             var cssAnimationFunction = function (obj) {
-                obj.slider.addClass("visible").children("li");
+                var outAnimationClass = outSelectForm.val();
+                var inAnimationClass = inSelectForm.val();
+                // All the opacity is to keep only the current slide visible. Since some of the animations "extends" the borders of the slider.
                 obj.slider.find("li").css("opacity", 0.0001);
                 obj.fromSlides.removeClass().css("opacity", 1).addClass(outAnimationClass);
                 setTimeout(function () {
@@ -52,7 +65,7 @@
                         left: 0
                     }).removeClass().addClass(inAnimationClass);
                     setTimeout(function () {
-                        obj.slider.removeClass("visible").find("li").css("opacity", 1);
+                        obj.toSlides.css("opacity", 1);
                         clones.remove();
                         obj.callback();
                     }, animationTime);
@@ -62,7 +75,10 @@
             var sudoSlider = $("#slider").sudoSlider({
                 effect: cssAnimationFunction,
                 prevNext: false,
-                numeric: true
+                numeric: true,
+                initCallback: function () {
+                    $("#slider ul li").not(this.getSlide(1)).css("opacity", 0.001);
+                }
             });
         });
     </script>
@@ -73,7 +89,9 @@
 </head>
 <body>
 <div id="container">
-    <h1>Sudo Slider jQuery Plugin - effect width CSS demo</h1>
+    <h1>Sudo Slider jQuery Plugin - effect width CSS3 demo</h1>
+    Out animation: <select id="outSelect"></select> <br />
+    In animation: <select id="inSelect"></select>
     <div style="position:relative;">
         <div id="slider">
             <ul>
@@ -85,6 +103,8 @@
             </ul>
         </div>
     </div>
+    <h3>Usage: See the source code</h3>
+    <h3>Remember that this only works in CSS3 browsers</h3>
 </div>
 <script type="text/javascript">
 
