@@ -1,52 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>Sudo Slider | effects tmp</title>
-    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-    <link rel="STYLESHEET" type="text/css" href="../css/style.css">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../js/jquery.sudoSlider.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            var sudoSlider = $("#slider").sudoSlider({
-                effect: "boxRainGrow",
-                continuous: true,
-                slideCount: 1
-            });
-        });
-    </script>
-
-
-
-
-</head>
-<body>
-<div id="container">
-    <h1>Sudo Slider jQuery Plugin - effect demo</h1>
-    <div style="position:relative;">
-        <div id="slider">
-            <ul>
-                <li><img src="../images/01.jpg" alt="image description"/><div style="position:absolute;top:50px;left:50px;"><p style="font-size:50px;color:white;">This is a text</p></div></li>
-                <li data-transition="slide"><img src="../images/02.jpg" alt="image description"/><div style="position:absolute;top:50px;left:50px;"><p style="font-size:50px;color:blue;">IM AM WRITING HERE</p></div></li>
-                <li><img src="../images/03.jpg" alt="image description"/><div style="position:absolute;top:50px;left:50px;"><p style="font-size:50px;color:green;">Rich text stuff</p></div></li>
-                <li><img src="../images/04.jpg" alt="image description"/><div style="position:absolute;top:50px;left:50px;"><p style="font-size:50px;color:red;">UGA UGA UGACHAKA</p></div></li>
-                <li><img src="../images/05.jpg" alt="image description"/><div style="position:absolute;top:50px;left:50px;"><p style="font-size:50px;color:pink;">Holy crap, THIS IS AWESOME</p></div></li>
-            </ul>
-        </div>
-    </div>
-</div>
-<script type="text/javascript">
-
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-20484420-1']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-
-</script>
-</body>
-</html>
