@@ -293,3 +293,6 @@ Change in script: Fixed that stopAuto() didn't stop first auto animation.
 Change in script: The script now inserts all the necessary CSS for the slider to run, no CSS needed.
 Change in script: When creating multiple sliders using the same selector, you can no longer expect methods to work.
 Change in docs: Removed the modal demo, and updated the videos demo.
+Change in docs: Added a "explorer effects" demo, to showcase every single effect build into SudoSlider (58 as of now).
+Change in docs: Added a "frontpage demo", it is basically the slider on the frontpage standalone.
+Change in docs: Added a "css effects" demo, that showcases how you can use CSS3 effects with SudoSlider.
